Add total and weekly energy saved for building api
