# backend/src/api/routes/energy.routes.ts
@@ -11,5 +11,7 @@ router.get('/total/', energyController.getTotalEnergy);
 router.get('/total/:slug', energyController.getTotalEnergyBySlug);
 router.get('/average/:slug', energyController.getAverageEnergyBySlug);
 router.get('/average', energyController.getAllAverage);
+router.get('/saved/weekly/:slug', energyController.getSavedWeeklyByBuildingName);
+router.get('/saved/total/:slug', energyController.getSavedByBuildingName);
 
 export default router;
